# bexio-receipts

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Qwen3.5.Modelfile  README.md  SECURITY.md  docker-compose.yml  implementation_plan.md  mypy.ini  mypy_errors.txt  plan.md  processed_receipts.db  pyproject.toml  pytest.ini  test.db  test_bexio_docs.py  test_bexio_owner.py  test_db.py  test_models.py  test_ollama.py  test_server_import.py
.gemini/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  eval.yml
docs/: API.md  ARCHITECTURE.md  BEXIO_API.md  CONFIGURATION.md  DECISIONS.md  DEVELOPMENT.md  INTERNAL_API.md  LOCAL_SETUP.md  OCR_DEPLOYMENT.md  OPERATIONS.md  PROD.md  TROUBLESHOOTING.md  VLM_PERFORMANCE.md  index.md
docs/archive/: audit_findings_2024.md  plan_review.md
src/bexio_receipts/: bexio_client.py  cli.py  config.py  database.py  document_processor.py  email_ingest.py  extraction.py  gdrive_ingest.py  models.py  ocr.py  pipeline.py  prompts.py  server.py  telegram_bot.py  validation.py  view_models.py  vllm_server.py  watcher.py
src/bexio_receipts/static/: styles.css
src/bexio_receipts/templates/: dashboard.html  history.html  review.html  setup.html  stats.html
tests/: conftest.py  mock_bexio.py  test_bexio_client.py  test_bexio_client_safety.py  test_bexio_docs.py  test_bexio_owner.py  test_bulk_actions.py  test_classification.py  test_cli.py  test_config.py  test_csrf.py  test_db.py  test_document_processor.py  test_e2e.py  test_extraction.py  test_extraction_regression.py  test_gdrive_perms.py  test_healthz.py  test_history.py  test_local_e2e.py  test_mappings.py  test_metrics.py  test_models.py  test_ocr.py  test_ollama.py  test_pipeline.py  test_pydantic_ai.py  test_pydantic_ai_provider.py  test_rate_limit.py  test_resilience.py  test_resilience_extra.py  test_security.py  test_server.py  test_server_import.py  test_validation.py  test_vat_extraction_utils.py  test_vllm_server.py
tests/eval/: conftest.py  test_vision_extraction.py
tests/eval/fixtures/: prodega_001.json
tests/fixtures/: prodega_ground_truth.json
