[project]
name = "bexio-receipts"
version = "0.2.0"
description = "An automated pipeline to ingest, OCR, and extract data from receipts directly into bexio."
readme = "README.md"
authors = [
    { name = "tazztone", email = "62671577+tazztone@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aioimaplib>=2.0.1",
    "fastapi>=0.136.0",
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "paddleocr>=3.4.1",
    "paddlepaddle>=3.3.1",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "prometheus-client>=0.25.0",
    "pydantic-ai>=1.84.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "python-telegram-bot>=22.7",
    "slowapi>=0.1.9",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
    "rich>=15.0.0",
    "uvicorn>=0.44.0",
    "watchdog>=6.0.0",
    "bcrypt>=5.0.0",
    "pdfplumber>=0.11.9",
]

[project.scripts]
bexio-receipts = "bexio_receipts.cli:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "--cov=bexio_receipts --cov-fail-under=85"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "python-multipart>=0.0.26",
    "respx>=0.23.1",
    "ruff>=0.15.11",
]
