[project]
name = "bexio-receipts"
version = "0.2.0"
description = "An automated pipeline to ingest, OCR, and extract data from receipts directly into bexio."
readme = "README.md"
authors = [
    { name = "tazztone", email = "62671577+tazztone@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "glmocr[selfhosted]>=0.1.5",
    "pymupdf",
    "pillow>=12.2.0",
    "prometheus-client>=0.25.0",
    "pydantic-ai>=1.84.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "slowapi>=0.1.9",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
    "rich>=15.0.0",
    "uvicorn>=0.44.0",
    "watchdog>=6.0.0",
    "bcrypt>=5.0.0",
    "pdfplumber>=0.11.9",
    "python-dateutil>=2.9.0.post0",
    "vllm>=0.19.1",
]

[project.scripts]
bexio-receipts = "bexio_receipts.cli:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=bexio_receipts --cov-fail-under=85 -m 'not local_e2e and not eval'"
asyncio_mode = "auto"
markers = [
    "local_e2e: end-to-end test requiring live LLM services and real receipt files (deselect by default)",
    "eval: vision eval tests requiring live vLLM (deselect by default)",
]

[tool.ruff]
target-version = "py312"
line-length = 88
# Completely exclude markdown and data dirs from all ruff operations
exclude = ["*.md", "docs/*", "inbox/*", "review_queue/*"]

[tool.ruff.lint]
# Comprehensive rules: Errors (E), Pyflakes (F), Bugbear (B), Isort (I), Naming (N), Upgrade (UP), Pylint (PL), etc.
select = ["E", "F", "B", "I", "N", "UP", "A", "T20", "C4", "RUF", "PLC", "PLE", "PLW", "SIM", "TCH"]
ignore = [
    "E501", # line length handled by formatter
    "B008", # function call in default argument
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
    "PLC0415", # allow local imports for CLI/performance
    "RUF001", # allow ambiguous characters (emojis)
    "TC003",  # allow stdlib imports at top-level (important for Pydantic)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "T201", # print is fine in tests
    "PLC0415", # nested imports are common in tests (e.g. for mocking)
    "N806", # uppercase variables for mocks are common
    "PLW0603", # global statement is sometimes needed in tests
]
"scripts/*" = ["T201"]

[tool.ruff.format]
preview = true
quote-style = "double"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "python-multipart>=0.0.26",
    "respx>=0.23.1",
    "ruff>=0.15.11",
    "types-python-dateutil>=2.9.0.20260408",
]
